hphp/hack/test/typecheck/inout/bad_inout_hint_parent5.php.exp
File "bad_inout_hint_parent5.php", line 11, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "bad_inout_hint_parent5.php", line 11, characters 19-21:
  Method `foo` has type `(function(): (function(int): void))` in `C2`
  File "bad_inout_hint_parent5.php", line 4, characters 19-21:
  But it has type `(function(): (function(inout int): void))` in parent `C1`
  File "bad_inout_hint_parent5.php", line 11, characters 19-21:
  Type `(function(): (function(int): void))` is not a subtype of `(function(): (function(inout int): void))`
  File "bad_inout_hint_parent5.php", line 4, characters 42-44:
  This is an `inout` parameter
  File "bad_inout_hint_parent5.php", line 11, characters 36-38:
  It is incompatible with a normal parameter
